Button Navigation Spacing Issues

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -4,7 +4,7 @@ div {
 .btn-nav {
   display: inline-block;
   padding-right: 20px 10px;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 .flex-container {
